--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,8 +22,8 @@ if (flutterVersionName == null) {
 }
 
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
+
 
 android {
     compileSdkVersion 29
@@ -74,62 +74,48 @@ repositories {
         url "https://jitpack.io"
     }
     maven {
-        // adcolony sdk repository
-        url 'https://adcolony.bintray.com/AdColony'
-    }
-    maven {
         // buzzvil sdk repository
-        url "https://dl.bintray.com/buzzvil/maven/"
+        url "https://dl.buzzvil.com/public/maven"
     }
+
     maven {
         // kakao sdk repository
         url 'http://devrepo.kakao.com:8088/nexus/content/groups/public/'
     }
-    maven {
-        // fyber sdk repository
-        url "https://fyber.bintray.com/marketplace"
-    }
-
 
     dependencies {
         implementation files('libs/avatye_cashbutton_v1.3.14.aar')
-
         implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.72'
-        implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+        implementation 'androidx.core:core-ktx:1.3.2'
         implementation 'androidx.appcompat:appcompat:1.2.0'
-        implementation 'com.google.android.material:material:1.3.0-alpha01'
-        implementation 'com.google.android.gms:play-services-basement:17.3.0'
+        implementation 'com.google.android.material:material:1.3.0-alpha03'
+        implementation 'com.google.android.gms:play-services-basement:17.4.0'
         implementation 'com.google.android.gms:play-services-ads-identifier:17.0.0'
         implementation 'joda-time:joda-time:2.10.5'
         implementation 'com.google.zxing:core:3.4.0'
         implementation('com.github.bumptech.glide:glide:4.11.0')
-        annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-
-        /** service-channeltalk */
-        implementation('com.zoyi.channel:plugin-android:7.2.0') {
-            exclude group: "androidx.gridlayout", module: 'gridlayout'
-        }
-
-        /** igaworks ssp */
-        implementation 'com.igaworks.ssp:IgawAdPopcornSSP:2.4.2'
+        implementation 'com.github.bumptech.glide:compiler:4.11.0'
         /** Buzzvill sdk */
         implementation("com.buzzvil:buzzad-benefit:2.9.1") {
             exclude group: 'com.buzzvil', module: 'buzzad-benefit-pop'
             exclude group: 'com.buzzvil', module: 'buzzad-benefit-notification'
         }
-
         /** mobon sdk */
         implementation('com.mobon.sdk:com.mobon.sdk:1.0.4.18') {
             transitive = true
             exclude group: 'com.google.android.gms'
         }
-        /** ad-mediation-group (unityads,adcolony,vungle,fyber,facebook) */
+        /** service-channeltalk */
+        implementation ('com.zoyi.channel:plugin-android:7.2.0'){
+            exclude group: "androidx.gridlayout", module: 'gridlayout'
+        }
+
+        /** igaworks ssp sdk & mediation */
+        implementation 'com.igaworks.ssp:IgawAdPopcornSSP:2.4.2'
+
+        /** ad-mediation-group (unityads,vungle,facebook) */
         implementation 'com.unity3d.ads:unity-ads:3.4.8'
-        implementation 'com.adcolony:sdk:4.2.2'
         implementation 'com.vungle:publisher-sdk-android:6.7.1'
-        implementation "com.fyber.vamp:core-sdk:7.7.2"
-        implementation "com.fyber.vamp:video-kit:7.7.2"
-        implementation "com.fyber.vamp:mraid-kit:7.7.2"
         implementation 'com.facebook.android:audience-network-sdk:6.2.0'
         implementation "com.kakao.adfit:ads-base:3.4.0"
 
