* Flutter Sample Project 버전 업테이트  - v1.3.14 -> v1.4.1g  - 지트팩 방식으로 변경  - 사용하지 않은 코드 제거

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,11 +11,15 @@ buildscript {
     }
 }
 
+
 allprojects {
     repositories {
         google()
         jcenter()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
+        maven { url "https://dl.buzzvil.com/public/maven" }
+        maven { url 'http://devrepo.kakao.com:8088/nexus/content/groups/public/' }
     }
 }
 
