--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,3 +1,6 @@
+plugins {
+    id 'com.android.application'
+}
 def localProperties = new Properties()
 def localPropertiesFile = rootProject.file('local.properties')
 if (localPropertiesFile.exists()) {
@@ -21,9 +24,7 @@ if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
 
-apply plugin: 'com.android.application'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
-
 
 android {
     compileSdkVersion 29
@@ -65,61 +66,11 @@ flutter {
 
 
 repositories {
-    flatDir {
-        // libs 디렉터리 참조
-        dirs 'libs'
-    }
-    maven {
-        // vungle sdk repository
-        url "https://jitpack.io"
-    }
-    maven {
-        // buzzvil sdk repository
-        url "https://dl.buzzvil.com/public/maven"
-    }
-
-    maven {
-        // kakao sdk repository
-        url 'http://devrepo.kakao.com:8088/nexus/content/groups/public/'
-    }
 
     dependencies {
-        implementation files('libs/avatye_cashbutton_v1.3.14.aar')
-        implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.72'
-        implementation 'androidx.core:core-ktx:1.3.2'
-        implementation 'androidx.appcompat:appcompat:1.2.0'
-        implementation 'com.google.android.material:material:1.3.0-alpha03'
-        implementation 'com.google.android.gms:play-services-basement:17.4.0'
-        implementation 'com.google.android.gms:play-services-ads-identifier:17.0.0'
-        implementation 'joda-time:joda-time:2.10.5'
-        implementation 'com.google.zxing:core:3.4.0'
-        implementation('com.github.bumptech.glide:glide:4.11.0')
-        implementation 'com.github.bumptech.glide:compiler:4.11.0'
-        /** Buzzvill sdk */
-        implementation("com.buzzvil:buzzad-benefit:2.9.1") {
-            exclude group: 'com.buzzvil', module: 'buzzad-benefit-pop'
-            exclude group: 'com.buzzvil', module: 'buzzad-benefit-notification'
-        }
-        /** mobon sdk */
-        implementation('com.mobon.sdk:com.mobon.sdk:1.0.4.18') {
-            transitive = true
-            exclude group: 'com.google.android.gms'
-        }
-        /** service-channeltalk */
-        implementation ('com.zoyi.channel:plugin-android:7.2.0'){
-            exclude group: "androidx.gridlayout", module: 'gridlayout'
-        }
-
-        /** igaworks ssp sdk & mediation */
-        implementation 'com.igaworks.ssp:IgawAdPopcornSSP:2.4.2'
-
-        /** ad-mediation-group (unityads,vungle,facebook) */
-        implementation 'com.unity3d.ads:unity-ads:3.4.8'
-        implementation 'com.vungle:publisher-sdk-android:6.7.1'
-        implementation 'com.facebook.android:audience-network-sdk:6.2.0'
-        implementation "com.kakao.adfit:ads-base:3.4.0"
-
+        implementation 'org.bitbucket.avatye:src_cashbutton_sdk_aos:1.4.1g'
         /** androidx.appcompat:appcompat:x.x.x 을 사용하고 있지 않을 경우 추가 필요 */
         implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
     }
+
 }
