* Flutter Sample Project 버전 업테이트 - v1.4.1g -> v1.5.2 - Pangle SDK 추가

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -74,5 +74,11 @@
             android:name="avatye_log"
             android:value="true" />
 
+        <!-- add the provider between the application tag -->
+        <provider
+            android:name="com.bytedance.sdk.openadsdk.multipro.TTMultiProvider"
+            android:authorities="${applicationId}.TTMultiProvider"
+            android:exported="false" />
+
     </application>
 </manifest>
